# Cosmic-battle

./: .gitignore  .gitmodules  CMakeLists.txt
.github/workflows/: cmake-single-platform.yml
GameServer/: CMakeLists.txt
GameServer/hdr/: ChainOfResponsibility.h  ConcurrentQueue.h  Endpoint.h  EventLoop.h  Exception.h  ExceptionHandler.h  ICommand.h  IoC.h  Logger.h  ManualResetEvent.h  MessageFormat.h  Movable.h  Move.h  Rotable.h  Rotate.h
GameServer/hdr/Commands/: BurnFuelCommand.h  ChangeVelocityCommand.h  CheckFuelCommand.h  ClearCurrentScope.h  CommandsHolder.h  DoubleRepeat.h  HardStopLoop.h  ICommand.h  InitIoC.h  InterpretCommand.h  LogCommand.h  MacroCommand.h  Move.h  MoveWithBurning.h  Register.h  RepeatCommand.h  Rotate.h  RotateWithVelocity.h  SetCurrentScope.h  SetPositionCommand.h  SoftStopLoop.h  StartLoop.h
GameServer/hdr/Exceptions/: ArgumentException.h  Exception.h
GameServer/hdr/Handlers/: AddLogCmdInQueue.h  CommonHandlers.h
GameServer/hdr/Objects/: Fuelable.h  IFuelable.h  IMovable.h  IRotable.h  Movable.h  Rotable.h  UObject.h
GameServer/src/: Endpoint.cpp  EventLoop.cpp  ExceptionHandler.cpp  IoC.cpp  Logger.cpp  Move.cpp  Rotate.cpp
GameServer/src/Commands/: BurnFuelCommand.cpp  ChangeVelocityCommand.cpp  CheckFuelCommand.cpp  InitIoC.cpp  InterpretCommand.cpp  MacroCommand.cpp  Move.cpp  MoveWithBurning.cpp  Rotate.cpp  RotateWithVelocity.cpp
Tests/: CMakeLists.txt  adaptersTest.h  commandsTest.h  corTest.h  endpointTest.h  eventLoopTest.h  handlersTest.h  iocTest.h  main.cpp  serverTest.h  testClasses.h
scripts/: cmake_creator.py  configurator.py  docker-compose.yml  main.py  searcher.py
